Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.1
  FEATURES:
    * The SMB (Samba) protocol is now supported in the playlist. Patch by 
      Steven van der Vegt <s.vandervegt@student.utwente.nl>. (BR 178691)
    * Podcasts have better indication of status with emblem icons.
      (BR 209433)
    * The information from the podcast feed can be written to the downloaded
      files. Both manually and automatically.
    * Track bookmarks can be removed directly by right-clicking.
    * Add a menu allowing the creation of any known type of bookmark to the 
      Bookmark Manager.
    * CTRL+SHIFT+F toggles full screen mode. Patch by Rick W. Chen
      <stuffcorpse@archlinux.us>.
    * Podcast episodes can now be marked as new/old manually.
    * Podcasts can now be grouped in the playlist and show useful info in the
      tag editor.
    * Playlist files can be droped on the "Saved Playlist" category to
      import them into Amarok. (BR 193476)
    * Playlist files from the default playlist location are now loaded by
      default. (BR 209596)
    * Added view menu to menu bar for ease of use.
    * Saved playlists and folders can now be deleted with the keyboard.
    * Added "Copy on Write" when trying to edit a read only (one of the 
      default) playlist layouts. The changed layout is now simply saved under 
      a new name. 
    * Added context view bookmarks, allowing saving and restoring of applet 
      setups.
    * Enhanced --debug feature: When a function takes very long to run (> 5s),
      we print a special message (DELAY) that can be searched easily.
    * Middle-clicking an item in the Collection Browser appends it to the
      playlist. Patch by Felix Geyer <debfx-kde@fobos.de>. (BR 197423)
    * Added feature for removing duplicates from the playlist. Patch by John
      Atkinson <john@fauxnetic.co.uk>. (BR 200445)
    * Allow changing of playlist layout item sizes using the inline editor.